# HPT-DM-CLINIC-

./: .env  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  settings.py  utils.py
models/: __init__.py  models.py  patient.py  users.py
static/css/: appointment.css  client.css  history.css  home.css  index.css  main.css  metrics.css  patients.css  profile.css  register.css  style.css  vitals.css
static/images/: ab5.avif  vitalsigns.css
static/js/: main.js  register.js  tabs.js
templates/: about.html  appointment.html  base.html  client.html  history.html  home.html  homebase.html  index.html  login.html  metrics.html  patient.html  patients.html  profile.html  register.html  response.html  sign_up.html  temporalfiles.html  treatment.html  vitals.html
