[tool.poetry]
name = "hpt-dm-clinic"
version = "0.1.0"
description = "Hypertension/Diabetic Clinic Management System"
authors = ["Emmanuel Adi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
